--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
         "unordered_map": "cpp",
         "unordered_set": "cpp",
         "string": "cpp",
-        "ios": "cpp"
+        "ios": "cpp",
+        "vector": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
